--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {lib_dirs,["apps"]}.
 {deps_dir,"deps"}.
 {deps, [
-    {shen,   ".*", {git, "git://github.com/5HT/shen",           {tag, "1.5.0"} }},
+    {shen,   ".*", {git, "git://github.com/5HT/shen",           {tag, []} }},
     {n2o,    ".*", {git, "git://github.com/synrc/n2o",          {tag, "1.8.0"} }},
     {erlydtl,".*", {git, "git://github.com/evanmiller/erlydtl", {tag, "0.8.0"} }},
     {cowboy, ".*", {git, "git://github.com/extend/cowboy",      {tag, "0.9.0"} }},
